Fri Dec 24 02:52:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen, rb_io_reopen): prohibit to change access mode for
	  special IO ports.  [ruby-dev:25225]

Fri Dec 24 02:22:53 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (syck_loader_transfer): check type conversion.

	* ext/syck/rubyext.c (syck_parser_assign_io, rb_new_syck_node): duck
	  typing.

	* ext/syck/rubyext.c (syck_parser_s_alloc, syck_parser_initialize):
	  allocation framework.

	* ext/syck/rubyext.c (syck_emitter_s_alloc, syck_emitter_initialize):
	  ditto.

Fri Dec 24 01:21:00 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt.rb: add BLT extension support

	* ext/tk/lib/tkextlib/blt/*.rb: ditto

	* ext/tk/lib/tkextlib/blt/tile/*.rb: ditto

Thu Dec 23 23:43:24 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_setgroups): check if the argument lenght is
	  modified.  fixed: [ruby-dev:25285]

	* process.c (SIZEOF_RLIM_T): err if size of rlim_t is not set.

Thu Dec 23 19:08:41 2004  Tanaka Akira  <akr@m17n.org>

	* rubyio.h: rename FMODE_UNSEEKABLE to FMODE_DUPLEX.

	* io.c (io_check_tty): extracted function to set FMODE_LINEBUF and
	  FMODE_DUPLEX.

Thu Dec 23 13:13:33 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: define TclTkLib::COMPILE_INFO and
	  RELEASE_DATE

	* ext/tcltklib/extconf.rb: ditto

	* ext/tk/tkutil.c: define TkUtil::RELEASE_DATE

	* ext/tk/lib/tk.rb: define Tk::RELEASE_DATE

Thu Dec 23 00:16:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (bsdi): use $(CC) for LDSHARED.  fixed [ruby-dev:25270]

Wed Dec 22 11:14:55 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_mode_modenum): replace O_ACCMODE with O_RDWR.
	  fixed: [ruby-dev:25273]

Wed Dec 22 08:34:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/sym.c (rb_dlsym_initialize): extract internal pointers after
	  all argument conversion.  fixed: [ruby-dev:25271]
